<resources>
    <string name="app_name">PatioComidas</string>
    <string name="login_titulo">Bienvenido a tu patio de comidas Virtual</string>
    <string name="login_usuario">Correo</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="login_Ingresar">Ingresar</string>
    <string name="login_Registrarse">Registrarse</string>
    <string name="login_noLogin">no se pudo iniciar sesión</string>
    <string name="Registro_correo">Correo</string>
    <string name="Registro_nombre">Nombre</string>
    <string name="Registro_cedula">Cédula</string>
    <string name="Registro_celular">Celular</string>
    <string name="Registro_registrarse">Registrarse</string>
    <string name="Registro_TerminosCondiciones">Acepta nuestros Terminos y condiciones.</string>
    <string name="Principal_Buscar">Buscar</string>
    <string name="Principal_CerrarSesion">Cerrar sesión</string>
    <string name="CarviewPrincipal_Direccion">Direccion</string>
    <string name="CarviewPrincipal_Actualmente">Actualmente</string>
    <string name="CarviewPrincipal_VerMenu">Ver Menú</string>
    <string name="Abierto">Abierto</string>
    <string name="Cerrado">Cerrado</string>
    <string name="CarviewPrincipal_Servicios">Servicios</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Filtrar">Filtrar por</string>
    <string name="Precio">Precio: $</string>
    <string name="Seleccione">Seleccione</string>
    <string name="Por_ciudad">Por Ciudad</string>
    <string name="servicios_restaurant">Indica que atiende en un restaurant.</string>
    <string name="servicios_quisco">Indica que atiende en un quiosco.</string>
    <string name="servicios_carpa">Indica que atiende en una carpa.</string>
    <string name="servicios_para_servirse">Indica que se puede comer en el local.</string>
    <string name="servicios_para_llevar">Indica que puede hacer un pedido y luego ir a retirar.</string>
    <string name="servicios_delivery">Indica que ofrece servicio a domicilo.</string>
    <string name="servicios_wifi">Indica que ofrece wifi.</string>
    <string name="servicios_credito">Indica que acepta tarjetas de credito.</string>
    <string name="categoria">Categoria</string>
    <string name="menu">Todo el menú</string>
    <string name="facebook_app_id">447269063171323</string>
    <string name="fb_login_protocol_scheme">fb447269063171323</string>


</resources>
